# lethal-company

./: .gitignore  .ocamlformat  Dockerfile  Makefile  dune-project  lethal_company.opam
.github/workflows/: build-and-push.yml
_build/: log
base/: README.md  manifest.json
base/config/: Electric.OuijaBoard.cfg  LC_API.cfg  MaskedEnemyRework.cfg  PestControl.cfg  RickArg.lethalcompany.helmetcameras.cfg  RugbugRedfern.SkinwalkerMod.cfg  com.willis.lc.portablehackpad.cfg  darmuh.TerminalStuff.cfg  io.github.IntroTweaks.cfg  jamil.corporate_restructure.cfg  taffyko.BetterSprayPaint.cfg  x753.More_Suits.cfg
core/: README.md  manifest.json
cosmetics/: README.md  manifest.json
lib/: category.ml  category.mli  command.ml  dependency.ml  dependency.mli  dune  manifest.ml  manifest.mli  team.ml  team.mli  version.ml  version.mli
pack/config/: Chaos.Diversity.cfg  LethalRichPresence.cfg  MegaPiggy.BuyableShotgunShells.cfg  NicholaScott.LethalCompany.ControlDeathVoting.cfg
static/: README.md  thunderstore.toml
static/config/: BepInEx.cfg  Chaos.Diversity.cfg  Dreamweave.CompanyBuildingEnhancements.cfg  Electric.IsThisTheWayICame.cfg  GoldenKitten.FairAI.cfg  ImmersiveVisor.cfg  Junypai.GamblersMod.cfg  LethalRichPresence.cfg  LethalThings.AudioVolume.cfg  MaskTheDead.cfg  MaskedEnemyRework.cfg  PushCompany.cfg  RugbugRedfern.SkinwalkerMod.cfg  SCPCBDunGen.cfg  ScoopysVarietyMod.cfg  SoulWithMae.CompanyExecutive.cfg  chillax.bastard.mod.cfg  com.willis.lc.lethalsettings.cfg  com.willis.lc.portablehackpad.cfg  darmuh.TerminalStuff.cfg  discount.alert.cfg  (+7 more)
test/: dune
(+12 files in other folders)
